--- a/coaching.html
+++ b/coaching.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SEITENTITEL – Daniel S.M. Möhle</title>
+  <title>Beratung & Coaching – Daniel S.M. Möhle</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -16,7 +16,7 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="angebote.html">Angebote</a></li>
+        <li><a href="angebote.html" class="active">Angebote</a></li>
         <li><a href="projekte.html">Projekte</a></li>
         <li><a href="medien.html">Medien</a></li>
         <li><a href="ueber-mich.html">Über mich</a></li>
@@ -24,42 +24,46 @@
     </nav>
   </header>
 
-  <main>
-    <section class="hero">
+  <!-- Hauptinhalt -->
+  <main class="detail-main">
+    <section class="detail-intro">
       <h2>Beratung & Coaching</h2>
-      <p>Komplexe Probleme strukturieren – Klarheit durch wissenschaftliche Analyse.</p>
-      <p><a class="btn" href="angebote.html">← Zurück zu Angebote</a></p>
+      <p>Komplexe Herausforderungen erfordern Klarheit, Struktur und analytisches Denken.  
+      Ich unterstütze bei der Entscheidungsfindung, Strategieentwicklung und Priorisierung – fundiert, nachvollziehbar und individuell angepasst.</p>
+      <a href="angebote.html" class="back-link">← Zurück zu den Angeboten</a>
     </section>
 
-    <section class="content grid-2">
-      <article>
-        <h3>Schwerpunkte</h3>
-        <ul>
-          <li>Entscheidungsfindung & Strategieentwicklung</li>
-          <li>Prozessanalyse & Optimierung</li>
-          <li>Problemlösung mit physikalisch-analytischem Ansatz</li>
-          <li>Coaching mit Fokus auf Klarheit & Priorisierung</li>
-        </ul>
+    <section class="detail-content">
+      <h3>Schwerpunkte</h3>
+      <ul>
+        <li>Entscheidungsfindung & Strategieentwicklung</li>
+        <li>Prozessanalyse & Optimierung</li>
+        <li>Problemlösung mit physikalisch-analytischem Ansatz</li>
+        <li>Coaching mit Fokus auf Klarheit & Priorisierung</li>
+      </ul>
 
-        <h3>Methodik</h3>
-        <ul>
-          <li>Wissenschaftlich fundierte Frameworks (Hypothesenbildung, Szenarienanalyse)</li>
-          <li>Logisch-mathematische Modelle für Entscheidungen</li>
-          <li>Kombination von rationaler Analyse & kreativer Lösungsfindung</li>
-        </ul>
-      </article>
+      <h3>Methodik</h3>
+      <ul>
+        <li>Wissenschaftlich fundierte Frameworks (Hypothesenbildung, Szenarienanalyse)</li>
+        <li>Logisch-mathematische Modelle zur Entscheidungsunterstützung</li>
+        <li>Kombination aus rationaler Analyse & kreativer Lösungsfindung</li>
+      </ul>
 
-      <aside>
-        <h3>Use-Cases</h3>
-        <ul>
-          <li>Unternehmerische Strategie & Innovationsprozesse</li>
-          <li>Persönliche Entscheidungsfindung</li>
-          <li>Team-Coaching für Forschungs- & Entwicklungsprojekte</li>
-        </ul>
+      <h3>Use-Cases</h3>
+      <ul>
+        <li>Unternehmerische Strategie & Innovationsprozesse</li>
+        <li>Persönliche Entscheidungsfindung</li>
+        <li>Team-Coaching für Forschungs- & Entwicklungsprojekte</li>
+      </ul>
 
-        <h3>Kontakt</h3>
-        <p><a class="btn" href="mailto:daniel.moe991@proton.me">Anfragen per E-Mail</a></p>
-      </aside>
+      <h3>Kontakt</h3>
+      <p>Beratungsgespräche werden individuell abgestimmt – vertraulich, analytisch und lösungsorientiert.</p>
+      <p><a class="back-link" href="mailto:daniel.moe991@proton.me">Anfragen per E-Mail</a></p>
+
+      <div class="detail-hinweis">
+        <p><strong>Hinweis:</strong> Dieses Angebot richtet sich an Einzelpersonen, Organisationen und Forschungsteams.  
+        Eine Umsetzung erfolgt ausschließlich im freiberuflichen Rahmen ohne gewerbliche Vermittlungstätigkeit.</p>
+      </div>
     </section>
   </main>
 
