--- a/lehre.html
+++ b/lehre.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SEITENTITEL – Daniel S.M. Möhle</title>
+  <title>Lehre & Wissenstransfer – Daniel S.M. Möhle</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -16,7 +16,7 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="angebote.html">Angebote</a></li>
+        <li><a href="angebote.html" class="active">Angebote</a></li>
         <li><a href="projekte.html">Projekte</a></li>
         <li><a href="medien.html">Medien</a></li>
         <li><a href="ueber-mich.html">Über mich</a></li>
@@ -24,46 +24,54 @@
     </nav>
   </header>
 
-  <main>
-    <section class="hero">
+  <!-- Hauptinhalt -->
+  <main class="detail-main">
+    <section class="detail-intro">
       <h2>Lehre & Wissenstransfer</h2>
-      <p>Wissen verständlich vermitteln – mit Praxisbezug und Klarheit.</p>
-      <p><a class="btn" href="angebote.html">← Zurück zu Angebote</a></p>
+      <p>Wissenschaft verständlich, präzise und praxisnah vermitteln – mit didaktischem Anspruch und technischer Klarheit.  
+      Von Tutorien und Workshops bis zu digitalen Lernmodulen: Wissen wird greifbar, nachvollziehbar und anwendbar.</p>
+      <a href="angebote.html" class="back-link">← Zurück zu den Angeboten</a>
     </section>
 
-    <section class="content grid-2">
-      <article>
-        <h3>Formate</h3>
-        <ul>
-          <li>Tutorien und Workshops (Universität, Schule, Weiterbildung)</li>
-          <li>Individuelle Lernkonzepte mit praxisnahen Übungen</li>
-          <li>Skripte, schriftliche Anleitungen & Aufgabenblätter</li>
-          <li>Interaktive Lernmodule (z. B. Python-Notebooks, Simulationen)</li>
-        </ul>
+    <section class="detail-content">
+      <h3>Formate</h3>
+      <ul>
+        <li>Tutorien und Workshops (Universität, Schule, Weiterbildung)</li>
+        <li>Individuelle Lernkonzepte mit praxisnahen Übungen</li>
+        <li>Skripte, schriftliche Anleitungen & Aufgabenblätter</li>
+        <li>Interaktive Lernmodule (z. B. Python-Notebooks, Simulationen)</li>
+      </ul>
 
-        <h3>Schwerpunkte</h3>
-        <ul>
-          <li><strong>Physik:</strong> Mechanik, Thermodynamik, Optik, Elektrizität & Magnetismus, Atom- & Kernphysik</li>
-          <li><strong>Chemie:</strong> Titrationen, Elektrochemie, Gleichgewichte, Gasgesetze</li>
-          <li><strong>Mathematik:</strong> Fehlerrechnung, Statistik, Regression, χ²-Tests</li>
-          <li><strong>Programmierung:</strong> Python-Grundlagen, Datenanalyse, Visualisierung, Simulationen</li>
-        </ul>
-      </article>
+      <h3>Schwerpunkte</h3>
+      <ul>
+        <li><strong>Physik:</strong> Mechanik, Thermodynamik, Optik, Elektrizität & Magnetismus, Atom- & Kernphysik</li>
+        <li><strong>Chemie:</strong> Titrationen, Elektrochemie, Gleichgewichte, Gasgesetze</li>
+        <li><strong>Mathematik:</strong> Fehlerrechnung, Statistik, Regression, χ²-Tests</li>
+        <li><strong>Programmierung:</strong> Python-Grundlagen, Datenanalyse, Visualisierung, Simulationen</li>
+      </ul>
 
-      <aside>
-        <h3>Besonderheit</h3>
-        <p>Praxisbeispiele und Experimente stehen im Fokus – von Code-Snippets bis hin zu kleinen Laborübungen.</p>
+      <h3>Didaktischer Ansatz</h3>
+      <ul>
+        <li>Kombination aus theoretischem Verständnis und praktischer Anwendung</li>
+        <li>Selbstständiges Lernen durch geführte Experimente und Simulationen</li>
+        <li>Fokus auf Erkenntnisprozesse statt bloßer Reproduktion</li>
+      </ul>
 
-        <h3>Zielgruppen</h3>
-        <ul>
-          <li>Studierende & Schüler:innen</li>
-          <li>Bildungseinrichtungen</li>
-          <li>Unternehmen mit Weiterbildungsbedarf</li>
-        </ul>
+      <h3>Zielgruppen</h3>
+      <ul>
+        <li>Studierende & Schüler:innen</li>
+        <li>Bildungseinrichtungen und Forschungsgruppen</li>
+        <li>Unternehmen mit Weiterbildungs- oder Schulungsbedarf</li>
+      </ul>
 
-        <h3>Kontakt</h3>
-        <p><a class="btn" href="mailto:daniel.moe991@proton.me">Anfragen per E-Mail</a></p>
-      </aside>
+      <h3>Kontakt</h3>
+      <p>Gerne erarbeite ich individuell angepasste Konzepte für Lehre, Schulung oder Wissenschaftskommunikation.</p>
+      <p><a class="back-link" href="mailto:daniel.moe991@proton.me">Anfragen per E-Mail</a></p>
+
+      <div class="detail-hinweis">
+        <p><strong>Hinweis:</strong> Dieses Angebot richtet sich an Bildungseinrichtungen, Forschungsteams und Lerninteressierte.  
+        Die Ausführung erfolgt im freiberuflichen Rahmen; Inhalte sind ausschließlich zur Wissensvermittlung bestimmt.</p>
+      </div>
     </section>
   </main>
 
@@ -77,3 +85,4 @@
   </footer>
 </body>
 </html>
+
