--- a/music-audio.html
+++ b/music-audio.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SEITENTITEL – Daniel S.M. Möhle</title>
+  <title>Music & Audio – Daniel S.M. Möhle</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -16,7 +16,7 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="angebote.html">Angebote</a></li>
+        <li><a href="angebote.html" class="active">Angebote</a></li>
         <li><a href="projekte.html">Projekte</a></li>
         <li><a href="medien.html">Medien</a></li>
         <li><a href="ueber-mich.html">Über mich</a></li>
@@ -24,52 +24,55 @@
     </nav>
   </header>
 
-
-  <main>
-    <section class="hero">
+  <!-- Hauptinhalt -->
+  <main class="detail-main">
+    <section class="detail-intro">
       <h2>Music & Audio</h2>
-      <p>Künstlerisch & wissenschaftlich – Audio, das auf Physik steht.</p>
-      <p><a class="btn" href="angebote.html">← Zurück zu Angebote</a></p>
+      <p>Wo Physik auf Kunst trifft: Frequenzen, Wellen und Resonanzen formen Klang, Raum und Gefühl.  
+      Jedes Projekt verbindet technische Präzision mit künstlerischer Ausdruckskraft – wissenschaftlich fundiert, hörbar präzise.</p>
+      <a href="angebote.html" class="back-link">← Zurück zu den Angeboten</a>
     </section>
 
-    <section class="content grid-2">
-      <article>
-        <h3>Leistungen</h3>
-        <ul>
-          <li>Sounddesign & Komposition (analog und digital)</li>
-          <li>Mixing & Mastering mit physikalischem Fundament</li>
-          <li>Audio-Processing: Filter, Dynamics, Spatial Audio</li>
-          <li>Analyse: FFT/Spektren, Resonanzen, Signal-Rausch-Verhältnis</li>
-        </ul>
+    <section class="detail-content">
+      <h3>Leistungen</h3>
+      <ul>
+        <li>Sounddesign & Komposition (analog und digital)</li>
+        <li>Mixing & Mastering mit physikalischem Fundament</li>
+        <li>Audio-Processing: Filter, Dynamik, Spatial Audio</li>
+        <li>Analyse: FFT/Spektren, Resonanzen, Signal-Rausch-Verhältnis</li>
+      </ul>
 
-        <h3>Wissenschaftlicher Anspruch</h3>
-        <ul>
-          <li>Akustik-Grundlagen: Resonanzfrequenzen, Schallgeschwindigkeit</li>
-          <li>Fourier-Analysen für Klangspektren</li>
-          <li>Signalverarbeitung mit Python und DAWs</li>
-          <li>Experimentelle Audio-Messungen (z. B. Frequenzgänge, Hallzeiten)</li>
-        </ul>
-      </article>
+      <h3>Wissenschaftlicher Anspruch</h3>
+      <ul>
+        <li>Akustik-Grundlagen: Resonanzfrequenzen, Schallgeschwindigkeit, Raumakustik</li>
+        <li>Fourier-Analysen für Klangspektren</li>
+        <li>Signalverarbeitung mit Python und professionellen DAWs</li>
+        <li>Experimentelle Audio-Messungen (z. B. Frequenzgänge, Nachhallzeiten)</li>
+      </ul>
 
-      <aside>
-        <h3>Use-Cases</h3>
-        <ul>
-          <li>Soundlogos & FX-Libraries für Marken & Games</li>
-          <li>Mastering für Streaming, Clubs & Performances</li>
-          <li>Akustische Analysen & Reports für Forschung & Technik</li>
-          <li>Experimentelle Musikprojekte mit naturwissenschaftlichem Bezug</li>
-        </ul>
+      <h3>Use-Cases</h3>
+      <ul>
+        <li>Soundlogos & FX-Libraries für Marken, Games & Installationen</li>
+        <li>Mastering für Streaming, Club & Bühne</li>
+        <li>Akustische Analysen & Reports für Forschung & Technik</li>
+        <li>Experimentelle Musikprojekte mit naturwissenschaftlichem Bezug</li>
+      </ul>
 
-        <h3>Tools</h3>
-        <ul>
-          <li>DAWs (Ableton, FL Studio, Reaper)</li>
-          <li>Python (NumPy, SciPy, Matplotlib für Spektren & Plots)</li>
-          <li>Plugins für Mixing/Mastering (EQs, Dynamik, Spatial Tools)</li>
-        </ul>
+      <h3>Tools & Methoden</h3>
+      <ul>
+        <li>DAWs: Ableton Live, FL Studio, Reaper</li>
+        <li>Python: NumPy, SciPy, Matplotlib für Frequenz- und Spektralanalyse</li>
+        <li>Plugins & Hardware: EQs, Dynamik, Spatial Tools, analoge Geräte</li>
+      </ul>
 
-        <h3>Kontakt</h3>
-        <p><a class="btn" href="mailto:daniel.moe991@proton.me">Projekt anfragen</a></p>
-      </aside>
+      <h3>Kontakt</h3>
+      <p>Ob wissenschaftliches Klangexperiment oder fein abgestimmtes Mastering – jede Zusammenarbeit beginnt mit einem klaren Ziel und einer Idee, die klingt.</p>
+      <p><a class="back-link" href="mailto:daniel.moe991@proton.me">Projekt anfragen</a></p>
+
+      <div class="detail-hinweis">
+        <p><strong>Hinweis:</strong> Dieses Angebot versteht sich als kreative & wissenschaftliche Dienstleistung im Bereich Akustik, Sounddesign und Signalverarbeitung.  
+        Eine Umsetzung erfolgt ausschließlich im freiberuflichen Rahmen.</p>
+      </div>
     </section>
   </main>
 
@@ -83,3 +86,4 @@
   </footer>
 </body>
 </html>
+
