--- a/visuals.html
+++ b/visuals.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SEITENTITEL – Daniel S.M. Möhle</title>
+  <title>Wissenschaftliche & künstlerische Visuals – Daniel S.M. Möhle</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -16,7 +16,7 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="angebote.html">Angebote</a></li>
+        <li><a href="angebote.html" class="active">Angebote</a></li>
         <li><a href="projekte.html">Projekte</a></li>
         <li><a href="medien.html">Medien</a></li>
         <li><a href="ueber-mich.html">Über mich</a></li>
@@ -24,53 +24,58 @@
     </nav>
   </header>
 
-  <main>
-    <section class="hero">
+  <!-- Hauptinhalt -->
+  <main class="detail-main">
+    <section class="detail-intro">
       <h2>Wissenschaftliche & künstlerische Visuals</h2>
-      <p>Kommunikation mit Klarheit – von Publikationsfigur bis künstlerischem Visual.</p>
-      <p><a class="btn" href="angebote.html">← Zurück zu Angebote</a></p>
+      <p>Kommunikation mit Präzision und Atmosphäre.  
+      Ob Forschungsdiagramm, künstlerische Komposition oder dokumentarisches Foto – jedes Visual verbindet Klarheit, Struktur und ästhetisches Feingefühl.</p>
+      <a href="angebote.html" class="back-link">← Zurück zu den Angeboten</a>
     </section>
 
-    <section class="content grid-2">
-      <article>
-        <h3>Schwerpunkte</h3>
-        <ul>
-          <li>Publikationsgrafiken (Plots, Diagramme, Schemata)</li>
-          <li>Datenvisualisierung (physikalische & chemische Messreihen)</li>
-          <li>Illustrationen für Forschungsberichte & Vorträge</li>
-          <li>Fotografie (wissenschaftlich, dokumentarisch, künstlerisch)</li>
-          <li>Videografie & Edits (Kurzclips, Visuals für Performance & Social Media)</li>
-        </ul>
+    <section class="detail-content">
+      <h3>Schwerpunkte</h3>
+      <ul>
+        <li>Publikationsgrafiken (Plots, Diagramme, Schemata)</li>
+        <li>Datenvisualisierung für physikalische & chemische Messreihen</li>
+        <li>Illustrationen für Forschungsberichte & Vorträge</li>
+        <li>Fotografie – wissenschaftlich, dokumentarisch & künstlerisch</li>
+        <li>Videografie & Edits (Kurzclips, Visuals für Performance & Social Media)</li>
+      </ul>
 
-        <h3>Wissenschaftlicher Anspruch</h3>
-        <ul>
-          <li>Physikalisch korrekte Achsen & Einheiten</li>
-          <li>Fehlerbalken, Unsicherheiten & Statistiken klar dargestellt</li>
-          <li>Konsistente Typografie & Farbkonzepte</li>
-          <li>Reproduzierbare Layouts für Publikationen & Poster</li>
-        </ul>
-      </article>
+      <h3>Wissenschaftlicher Anspruch</h3>
+      <ul>
+        <li>Physikalisch korrekte Achsen, Einheiten und Maßstäbe</li>
+        <li>Fehlerbalken, Unsicherheiten & Statistiken klar dargestellt</li>
+        <li>Konsistente Typografie & Farbkonzepte nach wissenschaftlichen Standards</li>
+        <li>Reproduzierbare Layouts für Publikationen, Poster & Reports</li>
+      </ul>
 
-      <aside>
-        <h3>Use-Cases</h3>
-        <ul>
-          <li>Forschungsberichte & Paper-Abbildungen</li>
-          <li>Poster & Präsentationsgrafiken</li>
-          <li>Künstlerische Visuals für Musik & Medien</li>
-          <li>Doku-Fotografie & Videoclips</li>
-        </ul>
+      <h3>Use-Cases</h3>
+      <ul>
+        <li>Abbildungen für Forschungsberichte & wissenschaftliche Paper</li>
+        <li>Poster- & Präsentationsgrafiken für Konferenzen</li>
+        <li>Künstlerische Visuals für Musik, Medien & Ausstellungen</li>
+        <li>Dokumentarische Foto- & Videoprojekte</li>
+      </ul>
 
-        <h3>Deliverables</h3>
-        <ul>
-          <li>Grafiken in SVG, PNG, PDF</li>
-          <li>Fotografie in RAW/JPEG, Video in MP4/ProRes</li>
-          <li>Loop-Visuals & Shorts für Social Media</li>
-          <li>Styleguides & Vorlagen auf Wunsch</li>
-        </ul>
+      <h3>Deliverables</h3>
+      <ul>
+        <li>Grafiken: SVG, PNG, PDF – druckfähig & publikationsgerecht</li>
+        <li>Fotografie: RAW, JPEG – farbkalibriert</li>
+        <li>Video: MP4 oder ProRes – auf Wunsch mit Motion Design</li>
+        <li>Styleguides & Vorlagen (Layout, Farbe, Schrift) auf Anfrage</li>
+      </ul>
 
-        <h3>Kontakt</h3>
-        <p><a class="btn" href="mailto:daniel.moe991@proton.me">Projekt anfragen</a></p>
-      </aside>
+      <h3>Kontakt</h3>
+      <p>Ob Forschungsvisual, Fotoprojekt oder multimediale Komposition – jedes Bild folgt einer klaren Idee:  
+      komplexe Inhalte sichtbar und erlebbar zu machen.</p>
+      <p><a class="back-link" href="mailto:daniel.moe991@proton.me">Projekt anfragen</a></p>
+
+      <div class="detail-hinweis">
+        <p><strong>Hinweis:</strong> Dieses Angebot umfasst wissenschaftliche und künstlerische Visualisierungen im freiberuflichen Rahmen.  
+        Alle Arbeiten entstehen individuell und sind urheberrechtlich geschützt (§2 UrhG).</p>
+      </div>
     </section>
   </main>
 
@@ -84,3 +89,4 @@
   </footer>
 </body>
 </html>
+
