--- a/medien.html
+++ b/medien.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SEITENTITEL – Daniel S.M. Möhle</title>
+  <title>Medien – Daniel S.M. Möhle</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -18,23 +18,51 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="angebote.html">Angebote</a></li>
         <li><a href="projekte.html">Projekte</a></li>
-        <li><a href="medien.html">Medien</a></li>
+        <li><a href="medien.html" class="active">Medien</a></li>
         <li><a href="ueber-mich.html">Über mich</a></li>
       </ul>
     </nav>
   </header>
 
   <!-- Hauptinhalt -->
-  <main>
-    <section class="medien-intro">
+  <main class="detail-main">
+    <section class="detail-intro">
       <h2>Medien</h2>
       <p>
-        Diese Seite dient als Einblick in meine visuelle und kreative Arbeit.  
-        Sie zeigt ausgewählte Impressionen aus den Bereichen Fotografie, Design, Musik und digitalen Projekten.  
-        <br><br>
-        <strong>Ziel:</strong> Inspiration und ein Eindruck meines Stils – nicht als Angebot im rechtlichen Sinne, 
-        sondern als Sammlung von visuellen Momenten und kreativen Experimenten.  
+        Diese Seite bietet einen Einblick in meine visuelle und kreative Arbeit.  
+        Sie zeigt ausgewählte Impressionen aus Fotografie, Musik, Design und digitalen Konzepten –  
+        als Sammlung von Ideen, Stilübungen und experimentellen Ansätzen.
       </p>
+    </section>
+
+    <section class="detail-content">
+      <h3>Inhalte & Themen</h3>
+      <ul>
+        <li><strong>Fotografie:</strong> Wissenschaftlich-dokumentarische Serien, experimentelle Makroaufnahmen, urbane Motive</li>
+        <li><strong>Design & Visuals:</strong> Grafiken, Animationen, visuelle Experimente, künstlerische Kompositionen</li>
+        <li><strong>Audio & Musik:</strong> Eigene Kompositionen, Klangexperimente, Sounddesign-Projekte</li>
+        <li><strong>Digital Art:</strong> KI-generierte Bildkonzepte, algorithmische Muster und visuelle Simulationen</li>
+      </ul>
+
+      <h3>Medienformat</h3>
+      <ul>
+        <li>Bilder in hoher Auflösung (JPG, PNG, RAW)</li>
+        <li>Video & Animation (MP4, ProRes, GIF)</li>
+        <li>Audio (WAV, MP3, FLAC)</li>
+        <li>Texte & Begleitkommentare zur Entstehung</li>
+      </ul>
+
+      <h3>Ziel</h3>
+      <p>
+        Die Medienauswahl zeigt die Verbindung von analytischem Denken und kreativer Gestaltung.  
+        Ob Ton, Bild oder Form – jedes Werk steht für einen experimentellen Zugang zu Wissenschaft, Wahrnehmung und Ausdruck.
+      </p>
+
+      <div class="detail-hinweis">
+        <p><strong>Hinweis:</strong> Die hier dargestellten Inhalte dienen ausschließlich zur Veranschaulichung.  
+        Sie sind keine Angebote im rechtlichen Sinne, sondern persönliche künstlerische Arbeiten im Rahmen meiner freiberuflichen Tätigkeit.  
+        Alle Medien sind urheberrechtlich geschützt (§ 2 UrhG).</p>
+      </div>
     </section>
   </main>
 
@@ -48,5 +76,4 @@
   </footer>
 </body>
 </html>
-
 
