--- a/medien.html
+++ b/medien.html
@@ -26,7 +26,9 @@
 
   <!-- Hauptinhalt -->
   <main class="detail-main">
-    <section class="detail-intro">
+
+    <!-- Neon-Box -->
+    <section class="neon-box">
       <h2>Medien</h2>
       <p>
         Diese Seite bietet einen Einblick in meine visuelle und kreative Arbeit.  
@@ -35,6 +37,7 @@
       </p>
     </section>
 
+    <!-- Hauptinhalt wie gehabt -->
     <section class="detail-content">
       <h3>Inhalte & Themen</h3>
       <ul>
@@ -76,4 +79,3 @@
   </footer>
 </body>
 </html>
-
