--- a/projekte.html
+++ b/projekte.html
@@ -25,12 +25,15 @@
   </header>
 
   <!-- Hauptinhalt -->
-  <main>
-    <section class="projekte-intro">
+  <main class="detail-main">
+
+    <!-- Neon-Box für Einleitung -->
+    <section class="neon-box">
       <h2>Projekte</h2>
       <p>
-        Auf dieser Seite präsentiere ich ausgewählte Projekte, Konzepte und Ideen.
-        Sie verstehen sich als Antworten auf reale Herausforderungen – klar gedacht, praktisch orientiert und mit Blick auf Wirkung umgesetzt.
+        Auf dieser Seite präsentiere ich ausgewählte Projekte, Konzepte und Ideen.  
+        Sie verstehen sich als Antworten auf reale Herausforderungen –  
+        klar gedacht, praktisch orientiert und mit Blick auf Wirkung umgesetzt.
       </p>
     </section>
 
@@ -210,37 +213,41 @@
             <li><strong>Ausblick:</strong> Kooperation gesucht</li>
           </ul>
         </details>
-
-      </div>
+ </div>
     </section>
 
-     <!-- Rechtlicher Hinweis -->
-    <section class="projekte-intro" style="margin-top:3rem;">
+    <!-- Rechtlicher Hinweis -->
+    <section class="detail-hinweis">
       <p>
-        <strong>Hinweis:</strong> 
-        Die hier dargestellten Inhalte sind keine Angebote im rechtlichen Sinne, 
-        sondern dienen ausschließlich zur Veranschaulichung. 
-        Eine Umsetzung in Kooperation mit Unternehmen, Institutionen oder anderen Partnern 
+        <strong>Hinweis:</strong>  
+        Die hier dargestellten Inhalte sind keine Angebote im rechtlichen Sinne,  
+        sondern dienen ausschließlich zur Veranschaulichung.  
+        Eine Umsetzung in Kooperation mit Unternehmen, Institutionen oder anderen Partnern  
         ist möglich, wird jedoch gesondert und ausdrücklich vereinbart.
       </p>
       <p>
-        <strong>Schutz und Urheberschaft:</strong> 
-        Alle hier dargestellten Projekte wurden von Daniel S.M. Möhle eigenständig konzipiert 
-        und in funktionalen Pilotversionen, Prototypen oder Codestrukturen umgesetzt. 
-        Sie sind als persönliche geistige Schöpfungen im Sinne des §2 UrhG urheberrechtlich geschützt.
+        <strong>Schutz und Urheberschaft:</strong>  
+        Alle hier dargestellten Projekte wurden von Daniel S.M. Möhle eigenständig konzipiert  
+        und in funktionalen Pilotversionen, Prototypen oder Codestrukturen umgesetzt.  
+        Sie sind als persönliche geistige Schöpfungen im Sinne des §2 UrhG urheberrechtlich geschützt.  
         Eine Nutzung, Reproduktion oder Weiterentwicklung ist nur mit vorheriger, ausdrücklicher Zustimmung zulässig.
       </p>
       <p>
-        Die Projekte verstehen sich als forschungs- und erkenntnisorientierte Arbeiten, 
-        die gesellschaftliche oder technologische Herausforderungen sichtbar machen. 
-        Eine eigenständige Realisierung durch Dritte ohne Bezugnahme oder Kooperation 
+        Die Projekte verstehen sich als forschungs- und erkenntnisorientierte Arbeiten,  
+        die gesellschaftliche oder technologische Herausforderungen sichtbar machen.  
+        Eine eigenständige Realisierung durch Dritte ohne Bezugnahme oder Kooperation  
         wird als Verletzung der Urheberschaft gewertet.
       </p>
     </section>
+  </main>
 
   <!-- Footer -->
   <footer>
-    <p>© 2025 Daniel S.M. Möhle · <a href="impressum.html">Impressum</a> · <a href="datenschutz.html">Datenschutz</a></p>
+    <p>
+      © 2025 Daniel S.M. Möhle · 
+      <a href="impressum.html">Impressum</a> · 
+      <a href="datenschutz.html">Datenschutz</a>
+    </p>
   </footer>
 </body>
 </html>
